--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
   },
   "homepage": "https://github.com/dlastname/Challenge-10-Employee-Tracker#readme",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "inquirer": "^12.4.1",
     "pg": "^8.13.1"
+  },
+  "devDependencies": {
+    "@types/node": "^22.13.0"
   }
 }
