--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "pg": "^8.13.1"
   },
   "devDependencies": {
-    "@types/node": "^22.13.0"
+    "@types/node": "^22.13.0",
+    "@types/pg": "^8.11.11",
+    "ts-node": "^10.9.2"
   }
 }
