--- a/package.json
+++ b/package.json
@@ -2,29 +2,25 @@
   "name": "challenge-10-employee-tracker",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
+  "type": "module",
   "scripts": {
+    "build": "npx tsc",
+    "start": "npm run build && node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dlastname/Challenge-10-Employee-Tracker.git"
-  },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/dlastname/Challenge-10-Employee-Tracker/issues"
-  },
-  "homepage": "https://github.com/dlastname/Challenge-10-Employee-Tracker#readme",
   "dependencies": {
     "dotenv": "^16.4.7",
-    "inquirer": "^12.4.1",
+    "inquirer": "^8.2.4",
     "pg": "^8.13.1"
   },
   "devDependencies": {
-    "@types/node": "^22.13.0",
+    "@types/inquirer": "^9.0.7",
+    "@types/node": "^20.17.17",
     "@types/pg": "^8.11.11",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   }
 }
