--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "challenge-10-employee-tracker",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
     "build": "npx tsc",
